<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="question_australia">Canberra is the capital of Australia?</string>
    <string name="question_amazon">The Amazon River is the longest river in the world?</string>
    <string name="question_everest">Mount Everest is the tallest mountain on Earth?</string>
    <string name="question_pacific">The Pacific Ocean is the largest ocean on Earth?</string>
    <string name="question_sahara">The Sahara is the largest desert in the world?</string>
    <string name="question_japan">Tokyo is the capital of Japan?</string>
    <string name="question_france">The Eiffel Tower is located in Paris, France?</string>
    <string name="question_egypt">The Great Pyramid of Giza is in Egypt?</string>
    <string name="question_canada">Ottawa is the capital of Canada?</string>
    <string name="question_brazil">Brasilia is the capital of Brazil?</string>
    <string name="question_russia">Moscow is the capital of Russia?</string>
    <string name="question_china">The Great Wall of China is visible from the moon?</string>
    <string name="question_india">New Delhi is the capital of India?</string>
    <string name="question_germany">Berlin is the capital of Germany?</string>
    <string name="question_italy">Rome is the capital of Italy?</string>
    <string name="question_africa">Africa is the largest continent?</string>
    <string name="question_nile">The Nile River flows through Egypt?</string>
    <string name="question_mexico">Mexico City is the capital of Mexico?</string>
    <string name="question_greenland">Greenland is the world\'s largest island?</string>
    <string name="question_iceland">Reykjavik is the capital of Iceland?</string>
    <string name="question_spain">Madrid is the capital of Spain?</string>
    <string name="question_uk">London is the capital of the United Kingdom?</string>
    <string name="question_greece">Athens is the capital of Greece?</string>
    <string name="question_turkey">Ankara is the capital of Turkey?</string>
    <string name="question_argentina">Buenos Aires is the capital of Argentina?</string>
    <string name="question_chile">Santiago is the capital of Chile?</string>
    <string name="question_peru">Lima is the capital of Peru?</string>
    <string name="question_thailand">Bangkok is the capital of Thailand?</string>
    <string name="question_vietnam">Hanoi is the capital of Vietnam?</string>
    <string name="question_indonesia">Jakarta is the capital of Indonesia?</string>
    <string name="question_switzerland">Bern is the capital of Switzerland?</string>
    <string name="question_sweden">Stockholm is the capital of Sweden?</string>
    <string name="question_norway">Oslo is the capital of Norway?</string>
    <string name="question_finland">Helsinki is the capital of Finland?</string>
    <string name="question_denmark">Copenhagen is the capital of Denmark?</string>
    <string name="question_portugal">Lisbon is the capital of Portugal?</string>
    <string name="question_poland">Warsaw is the capital of Poland?</string>
    <string name="question_austria">Vienna is the capital of Austria?</string>
    <string name="question_belgium">Brussels is the capital of Belgium?</string>
    <string name="question_netherlands">Amsterdam is the capital of the Netherlands?</string>
    <string name="question_south_africa">Pretoria is one of the capitals of South Africa?</string>
    <string name="question_kenya">Nairobi is the capital of Kenya?</string>
    <string name="question_egypt_capital">Cairo is the capital of Egypt?</string>
    <string name="question_morocco">Rabat is the capital of Morocco?</string>
    <string name="question_saudi_arabia">Riyadh is the capital of Saudi Arabia?</string>
    <string name="question_iran">Tehran is the capital of Iran?</string>
    <string name="question_iraq">Baghdad is the capital of Iraq?</string>
    <string name="question_israel">Jerusalem is the capital of Israel?</string>
    <string name="question_new_zealand">Wellington is the capital of New Zealand?</string>
    <string name="question_fiji">Suva is the capital of Fiji?</string>
</resources>